[gd_scene load_steps=15 format=3 uid="uid://cgcps2unu1g61"]

[ext_resource type="Script" path="res://boss.gd" id="1_d28ad"]
[ext_resource type="Script" path="res://follow_movement.gd" id="1_dgd5x"]
[ext_resource type="Texture2D" uid="uid://b3uglfjvvhlmj" path="res://art/boss.png" id="2_icpgt"]
[ext_resource type="Script" path="res://Tower.gd" id="3_0lvkj"]
[ext_resource type="PackedScene" uid="uid://dy87qw70q33yd" path="res://Scene/projectile.tscn" id="4_by4q1"]
[ext_resource type="Texture2D" uid="uid://cfvlfp4nwvphg" path="res://art/проба света 3.png" id="6_hr6ga"]
[ext_resource type="PackedScene" uid="uid://b8pit4ri38i0g" path="res://healthbar_boss.tscn" id="7_jyt5f"]
[ext_resource type="FontFile" uid="uid://bjxfmqfshipwv" path="res://art/Kenney Mini Square.ttf" id="8_a8u2s"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sp365"]
radius = 12.0
height = 42.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ef4xk"]
radius = 37.054

[sub_resource type="CircleShape2D" id="CircleShape2D_kiw7y"]
radius = 66.0303

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i61wu"]
height = 32.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_k1j1w"]
blend_mode = 1
light_mode = 2

[sub_resource type="LabelSettings" id="LabelSettings_fltkq"]
font = ExtResource("8_a8u2s")
font_size = 8

[node name="Boss" type="CharacterBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 2
script = ExtResource("1_d28ad")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 3)
shape = SubResource("CapsuleShape2D_sp365")

[node name="Foliow" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Foliow"]
rotation = 1.5708
shape = SubResource("CircleShape2D_ef4xk")

[node name="FollowMovementC" type="Node" parent="."]
script = ExtResource("1_dgd5x")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -9)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_icpgt")
region_enabled = true
region_rect = Rect2(9.80703, 48.8826, 49.4195, 77.2239)

[node name="Area2D" type="Area2D" parent="."]
visible = false
script = ExtResource("3_0lvkj")
projectile = ExtResource("4_by4q1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_kiw7y")

[node name="hitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox"]
position = Vector2(-1, 3)
shape = SubResource("CapsuleShape2D_i61wu")

[node name="TimerAttack" type="Timer" parent="."]

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(9, -20)

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(0.4, 1, 0.890196, 1)
self_modulate = Color(0.4, 1, 0.890196, 1)
material = SubResource("CanvasItemMaterial_k1j1w")
position = Vector2(1, -9)
scale = Vector2(0.7, 0.7)
texture = ExtResource("6_hr6ga")
region_enabled = true
region_rect = Rect2(9.80703, 48.8826, 49.4195, 77.2239)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthbarBoss" parent="CanvasLayer" instance=ExtResource("7_jyt5f")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -132.0
offset_right = 56.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="CanvasLayer/HealthbarBoss"]
layout_mode = 0
offset_left = 89.0
offset_top = 2.0
offset_right = 129.0
offset_bottom = 25.0
text = "Boss"
label_settings = SubResource("LabelSettings_fltkq")

[connection signal="body_entered" from="Foliow" to="FollowMovementC" method="_on_foliow_body_entered"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
[connection signal="area_entered" from="hitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="TimerAttack" to="Area2D" method="_on_timer_attack_timeout"]
